author: Nicholas Chandoke
build-type: Simple
cabal-version: >=1.10
bug-reports: https://github.com/nick-chandoke/niclib/issues/new
copyright: Copyright (c) 2016-2018 Nicholas Chandoke
description: URL, Filesystem, networking, and aeson helper methods. Miscellaneous functions, and implementation of Trie, a buffer that holds n most recent inserts/pushes, and a set that's memory efficient for storing redundant data.
extra-source-files: README.md
homepage: http://github.com/nick-chandoke/niclib
license-file: LICENSE
license: BSD3
maintainer: Nicholas Chandoke <nicholas.chandoke@gmail.com>
name: NicLib
stability: Stable
synopsis: Hodgepodge of functionality. The personal library of Nic Chandoke. Hopefully useful to others, too.
tested-with: GHC ==8.4.2
version: 0.1.4

library
  ghc-options: -Wno-type-defaults
  hs-source-dirs: src
  exposed-modules:
      Control.Monad.Trans.Lookup
      NicLib.Aeson
      NicLib.Errors
      NicLib.FileSystem
      NicLib.List
      NicLib.Net
      NicLib.NStdLib
      NicLib.Set
      NicLib.Statistics
      NicLib.Structures.Buffer
      NicLib.Structures.IndexedSet
      NicLib.Structures.Trie
      NicLib.Text
      NicLib.Time
      NicLib.Tree
  build-depends:
      base > 4 && < 5,
      ListLike,
      aeson,
      aeson-pretty,
      binary,
--    boolean-like,
      bytestring,
      containers,
      directory,
      exceptions,
      filepath,
      ghc-prim,
--    http-types,
--    http-conduit,
--    http-client,
--    streaming-commons,
      random-fu,
      random-source,
      req,
      safe-exceptions,
      transformers>=0.5.5.0,
      text,
      time,
      unix,
      uri-bytestring,
      unordered-containers,
      vector
  default-extensions:
      ApplicativeDo,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFunctor,
      DeriveGeneric,
      FlexibleContexts,
      FlexibleInstances,
      GeneralizedNewtypeDeriving,
      LambdaCase,
      MonadComprehensions,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoMonomorphismRestriction,
      NumDecimals,
      OverloadedLists,
      OverloadedStrings,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      TypeSynonymInstances,
      UndecidableInstances,
      ViewPatterns
  default-language: Haskell2010

  if !impl(ghc >= 8.4)
    build-depends: semigroups >= 0.16 && < 0.19

--test-suite niclib-test
--  type: exitcode-stdio-1.0
--  main-is: test.hs
--  build-depends: base >= 4 && < 5

source-repository head
  type:     git
  location: git://github.com/nick-chandoke/niclib.git
