author: Nicholas Chandoke
build-type: Simple
cabal-version: >=1.10
bug-reports: https://github.com/nick-chandoke/niclib/issues/new
copyright: Copyright (c) 2016-2019 Nicholas Chandoke
description: All kinds of stuff. Just look around. Everything's documented.
extra-source-files: README.md
homepage: http://github.com/nick-chandoke/niclib
license-file: LICENSE
license: BSD3
maintainer: Nicholas Chandoke <nicholas.chandoke@gmail.com>
name: NicLib
stability: Stable
synopsis: nixy's personal lib
tested-with: GHC ==8.4.3
version: 0.2.0

library
  ghc-options: -Wno-type-defaults
  hs-source-dirs: src
  exposed-modules:
      NicLib.FileSystem
      NicLib.List
      NicLib.Net
      NicLib.NStdLib
      NicLib.Set
      NicLib.Statistics
      NicLib.Structures.Buffer
      NicLib.Structures.IndexedSet
      NicLib.Structures.Trie
      NicLib.Text
      NicLib.Time
      NicLib.Tree
  build-depends:
      base > 4 && < 5,
      ListLike,
      binary,
      bytestring,
      comonad,
      conduit,
      containers,
      data-default,
      exceptions,
      fgl,
      filepath,
      ghc-prim,
      http-client,
      random-fu,
      random-source,
      req,
      req-conduit,
      rio,
      safe-exceptions,
      store,
      text,
      these,
      time,
      transformers>=0.5.5.0,
      unix,
      uri-bytestring,
      vector
--    http-conduit
--    streaming-commons
  default-extensions:
      ApplicativeDo,
      Arrows,
      BangPatterns,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFunctor,
      DeriveGeneric,
      FlexibleContexts,
      FlexibleInstances,
      GADTs,
      GeneralizedNewtypeDeriving,
      LambdaCase,
      MonadComprehensions,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude
      NoMonomorphismRestriction,
      NumDecimals,
      OverloadedLists,
      OverloadedStrings,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      TypeSynonymInstances,
      UndecidableInstances,
      ViewPatterns
  default-language: Haskell2010

  if !impl(ghc >= 8.4)
    build-depends: semigroups >= 0.16 && < 0.19

--test-suite niclib-test
--  type: exitcode-stdio-1.0
--  main-is: test.hs
--  build-depends: base >= 4 && < 5

source-repository head
  type:     git
  location: git://github.com/nick-chandoke/niclib.git
